# Canery-

./: README.md  bomb.html  canary.html  compliance.html  how-it-works.html  index.html  pyproject.toml  requirements-probe.txt  requirements.txt  the-maths.html
aicanary/: index-2.html  indexold.html
aicanary/canary/: __init__.py  config.py  dashboard.py  generator.py  store.py
aicanary/canary/aws/: __init__.py  honeytoken.py  lambda_handler.py
aicanary/canary/injection/: confluence.py
aicanary/canary/probe/: __init__.py  base.py  runner.py
aicanary/tests/: conftest.py  test_generator.py  test_lambda_handler.py  test_store.py
canary/: __main__.py  cli.py  dashboard.py  fuzzy.py  generator.py  logging_setup.py  models.py  store.py
canary/aws/: honeytoken.py  ingest.py  lambda_handler.py  provision.py
canary/injection/: __init__.py  base.py  local_docstore.py
canary/probe/: copilot_playwright.py  runner.py
config/: categories.yaml  config.example.yaml
tests/: test_deter.py  test_fuzzy.py  test_injection_local.py
