[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-canary"
version = "1.0.0"
description = "AI Data-Leakage Canary System - a defensive security canary-trap tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - internal security tooling" }
dependencies = [
    "boto3>=1.34,<2.0",
    "PyYAML>=6.0,<7.0",
    "rapidfuzz>=3.6,<4.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
probe = ["playwright>=1.44,<2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
canary = "canary.cli:main"

[tool.setuptools.packages.find]
include = ["canary*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
